objects/Airline__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Airline_id__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Airline id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Airline</label>
    <nameField>
        <label>Airline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>